页面样式实现

--- a/src/main/resources/public/pages/css/tasks.css
+++ b/src/main/resources/public/pages/css/tasks.css
@@ -450,3 +450,9 @@ fieldset > legend{
     border-color: rgba(0,0,0,.2)!important;
     border-style: solid;
 }
+.runMessageTr {
+	height: 30px;
+}
+.runMessageTd {
+	width : 100px;
+}
