--- a/src/main/resources/public/pages/css/tasks.css
+++ b/src/main/resources/public/pages/css/tasks.css
@@ -468,6 +468,16 @@ fieldset > legend{
     margin: 5px 0;
 }
 
+.pagleft input {
+    width: 40px;
+    height: 30px;
+    display: inline-block;
+    padding: 0 5px;
+    text-align: center;
+    outline: none;
+    border: 1px solid #ccc;
+}
+
 .logPage .pagination {
     position: absolute;
     right: 3px;
@@ -477,4 +487,30 @@ fieldset > legend{
 
 .logPage .pagination li {
 	display: inline-block;
+}
+
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
+    z-index: 3;
+    color: #999999;
+    background-color: #f5f5f5;
+    border-color: #dddddd;
+    cursor: default;
+}
+
+.pagination-sm>li>a, .pagination-sm>li>span {
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 8px 12px;
+    line-height: 1.42857143;
+    text-decoration: none;
+    color: #2fa4e7;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    margin-left: -1px;
 }
